# portzap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/portzap/: bin.js  package.json
npm/portzap-darwin-arm64/: package.json
npm/portzap-darwin-x64/: package.json
npm/portzap-linux-arm64/: package.json
npm/portzap-linux-x64/: package.json
src/: cli.rs  config.rs  errors.rs  interactive.rs  killer.rs  main.rs  output.rs  process.rs  scanner.rs  theme.rs  tui.rs
src/commands/: completions.rs  free.rs  kill.rs  list.rs  mod.rs  wait.rs  watch.rs
src/platform/: linux.rs  macos.rs  windows.rs
tests/: cli_integration.rs
tests/helpers/: mod.rs
