[package]
name = "portzap"
version = "0.1.3"
edition = "2021"
rust-version = "1.74"
description = "A fast, cross-platform port management tool. Kill, list, and watch processes on network ports."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/justinkarso/portzap"
repository = "https://github.com/justinkarso/portzap"
keywords = ["port", "kill", "process", "network", "cli"]
categories = ["command-line-utilities", "os"]

[[bin]]
name = "portzap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
thiserror = "2"
anyhow = "1.0"
comfy-table = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = { version = "4", features = ["supports-colors"] }
dialoguer = "0.11"
signal-hook = "0.3"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
